# liblmplayer-search

./: .gitignore  Makefile.am  NEWS  configure.ac  control  liblmplayer-search.pc.in  libsearchlibrary.pc.in
po/: POTFILES.in
src/: Makefile.am  daemon-main.c  database.c  database.h  deamon-main.c  library.db  lmplayer-database.c  lmplayer-database.h  lmplayer-search-daemon-autostart.desktop.in  main.c  monitor.c  monitor.h  pinyin.c  pinyin.h  search  search-box.c  search-box.h  search-library.c  search-library.h  search.c  search.h  small-search.c  small-search.h  test-main.c  type.h  view.c  view.h
